# static_std_exception

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake-single-platform.yml
lib/: exception_types.h  throw_functions.cc
test/: CMakeLists.txt  static_std_exception_test.cpp
